--- a/src/main/resources/templates/visitor/visitor_checkin.html
+++ b/src/main/resources/templates/visitor/visitor_checkin.html
@@ -107,5 +107,12 @@
         </form>
     </div>
 </div>
+
+<div class="w3-padding-16"></div>
+
+<footer class="w3-container w3-theme-dark">
+    <h5>French Soldier:</h5>
+    <p class="w3-opacity">“Your mother was a hamster and your father smelt of elderberries.”</p>
+</footer>
 </body>
 </html>
