--- a/src/main/resources/templates/visitor/visitor_checkout.html
+++ b/src/main/resources/templates/visitor/visitor_checkout.html
@@ -82,6 +82,11 @@
     </div>
 </div>
 
+<div class="w3-padding-16"></div>
 
+<footer class="w3-container w3-theme-dark">
+    <h5>Black Knight:</h5>
+    <p class="w3-opacity">“It's just a flesh wound.”</p>
+</footer>
 </body>
 </html>
